# koheron-sdk

./: .gitmodules  Makefile
.setup/: install_dependencies_debian.sh  install_dependencies_rh.sh
boards/alpha250/: adc_dac.tcl  board.mk
boards/alpha250-1g/: board.mk
boards/alpha250-1g/config/: ports.xdc
boards/alpha250-1g/patches/: devicetree.patch
boards/alpha250-4/: starting_point.tcl
boards/alpha250-4-1g/: adc.tcl  spi.tcl
boards/alpha250-4-1g/patches/: devicetree.patch
boards/alpha250-4/config/: ports.xdc
boards/alpha250-4/drivers/: ltc2157.hpp
boards/alpha250/patches/: devicetree.patch
boards/cora07s/: PART  analogue.tcl  board.mk  board_connections.tcl  board_connections_auto.tcl  digital.tcl  pmods.tcl
boards/cora07s/config/: board_preset.tcl  ck-analogue.xdc  ck-digital.xdc  ports.xdc  system_top.vhd
boards/cora07s/patches/: devicetree.patch
boards/mars_zx3/: board.mk  board_only_connections.tcl
boards/mars_zx3/config/: board_preset.tcl  ports.xdc  system_top_PM3.vhd
boards/mercury_ux1_pe1/: PART  board.mk  board_only_connections.tcl
boards/mercury_ux1_pe1/config/: anios.xdc  board_preset.tcl  fmc.xdc  pmods.xdc  ports.xdc  system_top_PE1.vhd
boards/mercury_zx1_pe1/: board.mk  board_only_connections.tcl  pcie_mm_connections.tcl
boards/mercury_zx1_pe1/config/: anios.xdc  board_preset.tcl  fmc.xdc  pmods.xdc  ports.xdc  system_top_pcie_PE1.vhd
boards/microzed/: board.mk
boards/microzed/patches/: devicetree.patch  devicetree_2019.1.patch
boards/mydc7z015/: board.mk
boards/mydc7z015/patches/: devicetree.patch
boards/st3_z7020/config/: ports.xdc
boards/teb803/config/: fmc.xdc  ports.xdc
boards/teb808/: board.mk
boards/teb808/config/: ports.xdc
boards/tef1001/160T/: PART
boards/tef1001/config/: fmc.xdc  ports.xdc
boards/zcu102/: PART  board.mk  board_only_connections.tcl  sfp_ethernet.tcl
boards/zcu102/config/: board_preset.tcl  ddr.xdc  fmc.xdc  gpio.xdc  hdmi.xdc  pmod.xdc  ports.xdc  sfp.xdc  trace.xdc
boards/zcu208/: PART  board.mk  board_only_connections_ram_c0.tcl  board_only_connections_ram_c1.tcl  board_only_connections_rf.tcl
boards/zcu208/config/: board_preset.tcl  ddr.xcd  ports.xdc  rf.xdc
docker/: Dockerfile  docker.mk  install_docker.sh  install_docker_debian.sh
examples/alpha250-1g/adc-dac-dma-triggered/: adc-dac-dma.hpp  block_design.tcl  config.yml  test.py
examples/alpha250-1g/fft/: block_design.tcl
examples/alpha250-4/adc-dma-origin/: adc-dma.hpp  block_design.tcl  config.yml  test.py
examples/alpha250-4/adc-dma-triggered/: adc-dma.hpp  block_design.tcl  config.yml  fifo_controller.hpp  test.py  trigger.vhd  trigger2.vhd
examples/alpha250-4/datacq_adc_unit/: README.md  block_design.tcl  config.yml  datacq_unit.hpp
examples/alpha250-4/psa-quad/: test.py  (+11 more)
examples/mars_zx3/star-tracker/libclient/: CMakeLists.txt  client.mk  driver.cpp  driver.hpp  driver_camera.cpp  fpgacameratrigger.hpp  fpgaskytracker.hpp
fpga/: fpga.mk
fpga/lib/: ctl_sts.tcl  starting_point.tcl  starting_point_xdma.tcl  starting_point_zynqmp.tcl  utilities.tcl
fpga/vivado/: bitstream.tcl  core.tcl  project.tcl
os/: board.mk  os.mk  xilinx_zynq_defconfig  zynq.mk
os/api/: install_instrument.sh
os/scripts/: patch_devicetree.sh  patch_overlay.sh  ubuntu-development.sh  ubuntu-production.sh
os/systemd/: uwsgi.service
server/: server.mk
server/context/: context.hpp  fpga_manager.hpp  memory_map.hpp  spi_dev.cpp  spi_dev.hpp
server/core/: PracticalSocket.cpp  session.hpp
server/drivers/: common.hpp  xadc.hpp
server/templates/: interface_driver.cpp
setup/: install_dependencies_rh.sh  install_gcc_compilers_debian.sh  install_os_rh.sh  install_web_rh.sh
web/: web.mk
(+284 files in other folders)
